--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/lodash-es": "^4.17.7",
+    "@types/marked": "^4.0.8",
     "vue": "^3.2.47"
   },
   "devDependencies": {
